Fixed blog list styling on safari

--- a/public/css/styles.scss
+++ b/public/css/styles.scss
@@ -377,22 +377,20 @@ body {
 .blog-directory {
   display: flex;
   flex-direction: column;
-  align-items: center;
   margin-bottom: 2rem;
   font-size: 1.6rem;
   max-width: 100%;
+  text-align: center;
 
   @media screen and (min-width: 600px) {
     order: 1;
     max-width: 100%;
-    text-align: center;
     max-width: 30rem;
     margin-top: 4rem;
     height: 130vh;
   }
 
   &__title {
-    text-align: center;
     font-size: 2.6rem;
   }
 
@@ -441,13 +439,19 @@ body {
     }
 
     &__snippet {
+      position: relative;
+      line-height: 2rem;
+      max-height: 8rem;
+      text-align: justify;
+      margin-right: -1rem;
+      padding-right: 3rem;
       // display: -webkit-box;
-      // font-size: 1.6rem;
+      font-size: 1.6rem;
       // text-align: center;
-      // overflow: hidden;
+      overflow: hidden;
       // -webkit-line-clamp: 4;
       // -webkit-box-orient: vertical;
-      // margin-bottom: 3rem;
+      margin-bottom: 3rem;
     }
     &__button {
       @include button-main;
